# iot-ids

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: exp_ae_normal_bot_iot.md  exp_rf_bot_iot_baseline.md  exp_rf_bot_iot_smote.md  exp_rf_bot_iot_undersampled.md
src/: config.py
src/app/: dashboard.py
src/data_prep/: build_n_baiot_from_original.py  clean_and_merge.py  debug_n_baiot.py  load_raw.py
src/edge/: __init__.py  edge_benchmark.py  edge_inference.py  edge_server.py
src/evaluation/: check_metrics.py  collect_model_metrics.py  eval_autoencoder_anomaly.py  eval_cnn_tcn.py  eval_isolation_forest_anomaly.py  eval_rf_by_source.py  eval_supervised.py  inspect_by_source.py  inspect_labels.py
src/features/: build_basic_features.py  normal_only_dataset.py
src/training/: train_autoencoder_normal.py  train_rf_baseline.py  train_rf_edge.py  train_rf_smote.py  train_rf_undersampled.py
