[project]
name = "iot-ids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "imbalanced-learn>=0.12.0",
    "torch>=2.0.0",
    "streamlit>=1.51.0",
    "lightgbm>=4.6.0",
    "psutil>=7.1.3",
]
